test/libsolidity/syntaxTests/abstract/interface.sol
abstract interface A { }
// ----
// TypeError: (0-24): Only contracts can be abstract.
